--- a/thisweekinnfts.html
+++ b/thisweekinnfts.html
@@ -1,211 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="calendar.css" />
-    <link rel="stylesheet" href="blog.css" />
-    <title>Crypted.</title>
-  </head>
-  <body>
-    <nav class="nav">
-      <div class="nav-bar">
-        <div class="nav-left">
-          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
-            Crypted.
-          </div>
-        </div>
-        <div class="nav-right">
-          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
-            About Us
-            <div class="dropdown-content">
-              <a href="contactus.html">Contact Us</a>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
+         rel="stylesheet"
+         />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="main.css" />
+      <link rel="stylesheet" href="calendar.css" />
+      <link rel="stylesheet" href="blog.css" />
+      <title>Crypted.</title>
+   </head>
+   <body>
+      <nav class="nav">
+         <div class="nav-bar">
+            <div class="nav-left">
+               <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
+                  Crypted.
+               </div>
             </div>
-          </div>
-          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
-            Learn NFTs
-            <div class="dropdown-content">
-              <a href="whatarenfts.html">What are NFTs?</a>
-              <a href="commonnftterms.html">Common NFT Terms</a>
-              <a href="commonnftscams.html">Common NFT Scams</a>
-              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            <div class="nav-right">
+               <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
+                  About Us
+                  <div class="dropdown-content">
+                     <a href="contactus.html">Contact Us</a>
+                  </div>
+               </div>
+               <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
+                  Learn NFTs
+                  <div class="dropdown-content">
+                     <a href="whatarenfts.html">What are NFTs?</a>
+                     <a href="commonnftterms.html">Common NFT Terms</a>
+                     <a href="commonnftscams.html">Common NFT Scams</a>
+                     <a href="thisweekinnfts.html">This Week in NFTs</a>
+                  </div>
+               </div>
+               <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
+                  Learn Crypto
+                  <div class="dropdown-content">
+                     <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+                     <a href="commoncryptoterms.html">Common Crypto Terms</a>
+                     <a href="commoncryptoscams.html">Common Crypto Scams</a>
+                  </div>
+               </div>
             </div>
-          </div>
-          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
-            Learn Crypto
-            <div class="dropdown-content">
-              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
-              <a href="commoncryptoterms.html">Common Crypto Terms</a>
-              <a href="commoncryptoscams.html">Common Crypto Scams</a>
-            </div>
-          </div>
-        </div>
+         </div>
+      </nav>
+      <div class="content">
+      <div class="blog">
+         <div class="blog-header">
+            <h1 id="blog-header-text">This Week in NFTs</h1>
+         </div>
+         <div id="blog-sharebar">
+            <a> Share: </a>
+            <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
+            <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
+         </div>
       </div>
-    </nav>
-
-    <div class="content">
-        <div id="blog-sharebar">
-          <a> Share: </a>
-          <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-          <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-          <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
-          <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
-        </div>
-        <h1 class="title">This Week's NFT Events</h1>
-        <div class="calendar">
+      <div>
+         <div class="calendar">
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    March 28th
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            CryptoPunks Mint - 3PM (ETH)
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  March 28th
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     CryptoPunks Mint - 3PM (ETH)
+                     </a>
+                  </div>
+               </div>
             </div>
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    March 29th
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            Nothing...
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  March 29th
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     Nothing...
+                     </a>
+                  </div>
+               </div>
             </div>
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    March 30th
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            World of Women Galaxy Mint - 1PM (ETH)
-                        </a>
-                    </div>
-                    <div class="calendar_event">
-                        <a>
-                            Krakenz Mint - 8PM (SOL)
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  March 30th
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     World of Women Galaxy Mint - 1PM (ETH)
+                     </a>
+                  </div>
+                  <div class="calendar_event">
+                     <a>
+                     Krakenz Mint - 8PM (SOL)
+                     </a>
+                  </div>
+               </div>
             </div>
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    March 31st
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            World of Women Galaxy Reveal - 7AM (ETH)
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  March 31st
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     World of Women Galaxy Reveal - 7AM (ETH)
+                     </a>
+                  </div>
+               </div>
             </div>
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    April 1st
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            Nothing...
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  April 1st
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     Nothing...
+                     </a>
+                  </div>
+               </div>
             </div>
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    April 2nd
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            Nothing...
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  April 2nd
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     Nothing...
+                     </a>
+                  </div>
+               </div>
             </div>
             <div class="calendar_holder">
-                <div class="calendar_date">
-                    April 3rd
-                </div>
-                <div class="calendar_events">
-                    <div class="calendar_event">
-                        <a>
-                            The Bubble Pops.
-                        </a>
-                    </div>
-                </div>
+               <div class="calendar_date">
+                  April 3rd
+               </div>
+               <div class="calendar_events">
+                  <div class="calendar_event">
+                     <a>
+                     The Bubble Pops.
+                     </a>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="contactus_link">
+         </div>
+         <div class="contactus_link">
             <a>
-                Please contact us if you'd like to add your own event to the page!
+            Please contact us if you'd like to add your own event to the page!
             </a>
+         </div>
+      </div>
+      <footer class="footer">
+        <div id="footer_about">
+           <h2>Crypted.</h2>
+           <p>
+              On Crypted, we will teach you all you need to know to get deeply into
+              the world of cryptocurrency. We have pages for beginners and for more
+              experienced users. Anyone can learn new things while navigating our
+              website.
+           </p>
         </div>
-        
-    </div>
-
-    <footer class="footer">
-      <div id="footer_about">
-        <h2>Crypted.</h2>
-        <p>
-          On Crypted, we will teach you all you need to know to get deeply into
-          the world of cryptocurrency. We have pages for beginners and for more
-          experienced users. Anyone can learn new things while navigating our
-          website.
-        </p>
-      </div>
-      <div id="footer_crypto">
-        <h2>Cryptocurrency</h2>
-        <div id="footer_crypto_ul">
-          <ul>
-            <li><a href="">Cryptocurrency Information Directory</a></li>
-            <li><a href="">What is Cryptocurrency?</a></li>
-            <li><a href="">Common Cryptocurrency Terms</a></li>
-            <li><a href="">What is Web3?</a></li>
-          </ul>
+        <div id="footer_NFT">
+           <h2>NFT</h2>
+           <div id="footer_NFT_ul">
+              <ul>
+                 <li><a href="learnnfts.html">Learn NFTs</a></li>
+                 <li><a href="whatarenfts.html">What are NFTs?</a></li>
+                 <li><a href="commonnftterms.html">Common NFT Terms</a></li>
+                 <li><a href="commonnftscams.html">Common NFT Scams</a></li>
+                 <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
+              </ul>
+           </div>
         </div>
-      </div>
-      <div id="footer_NFT">
-        <h2>NFT</h2>
-        <div id="footer_NFT_ul">
-          <ul>
-            <li><a href="">NFT Information Directory</a></li>
-            <li><a href="">What is an NFT?</a></li>
-            <li><a href="">Common NFT Terms</a></li>
-            <li><a href="">NFT Deep Dive?</a></li>
-          </ul>
+        <div id="footer_crypto">
+           <h2>Cryptocurrency</h2>
+           <div id="footer_crypto_ul">
+              <ul>
+                 <li><a href="learncrypto.html">Learn Crypto</a></li>
+                 <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
+                 <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
+                 <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
+              </ul>
+           </div>
         </div>
-      </div>
-      <div id="footer_signup">
-        <h2>Sign up now and get updates from our newsletter.</h2>
-        Our newsletter delivers once a week.<br />
-        <label for="email_input">Your Email:</label>
-        <input
-          class="text_input"
-          type="text"
-          id="email_input"
-          name="fname"
-        /><br /><br />
-        <button onclick="document.getElementById('email_input').value = ''">
-          Submit
-        </button>
-      </div>
-    </footer>
-  </body>
+        <div id="footer_signup">
+           <h2>Sign up now and get updates from our newsletter.</h2>
+           Our newsletter delivers once a week.<br />
+           <label for="email_input">Your Email:</label>
+           <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
+           <button onclick="document.getElementById('email_input').value = ''">
+           Submit
+           </button>
+        </div>
+     </footer>
+   </body>
 </html>
